--- a/ansible/roles/rockstor_installer/tasks/packages.yml
+++ b/ansible/roles/rockstor_installer/tasks/packages.yml
@@ -24,13 +24,13 @@
       update_cache: no
 
   # TODO: Might help put python2 dependencies on Tumbleweed
-  - name: Install pip2 packages
+  - name: Install python 2 packages
     command: pip2 install "{{ item }}"
-    loop: "{{ rs_inst_pip2_packages }}"
+    loop: "{{ rs_inst_python2_packages }}"
 
-  - name: Install pip3 packages
+  - name: Install python 3 packages
     command: pip3 install "{{ item }}"
-    loop: "{{ rs_inst_pip3_packages }}"
+    loop: "{{ rs_inst_python3_packages }}"
 
   - name: Force Postgresql 10
     command: alternatives --set postgresql /usr/lib/postgresql10
